# whisper_ros1

./: CMakeLists.txt  README.md  package.xml
include/: common-ros.h  rosaudio_controller.h
launch/: whisper.launch
lib/whisper.cpp/: CMakeLists.txt
src/: common-ros.cpp  ros_stream.cpp  rosaudio_controller.cpp
